# aoc2025

./: .ocamlformat  algo.ml  algo.mli  day01.ml  day01_input.dots  day02.ml  day02_input.dots  day03.ml  day03_input.dots  day04.ml  day04_input.dots  day05.ml  day05_input.dots  day06.ml  day06_input.dots  day07.ml  day07_input.dots  day08.ml  day08_input.dots  day09.ml  day09_input.dots  day10.ml  day10_input.dots  day11.ml  day11_input.dots  day12.ml  day12_input.dots  dune  dune-project  flake.nix  parsing_util.ml  parsing_util.mli  run.ml  run.mli  solutions.txt  vec.ml  vec.mli
input/: dune  input.ml
