(library
 (public_name aoc2025)
 (libraries angstrom cmdliner diet ocamlgraph z3)
 (flags :standard -open Base -open Stdio)
 (inline_tests)
 (preprocess
  (pps ppx_jane)))

(subdir
 run
 (dynamic_include ../generate/dune.inc))

(subdir
 generate
 (rule
  (with-stdout-to
   dune.inc
   (run ../gen/gen.exe 12))))
